--- a/assets/styles/scss/layouts/variables.scss
+++ b/assets/styles/scss/layouts/variables.scss
@@ -7,6 +7,7 @@ $button-color: #F7C78E;
 $figure-color: #FF7C02;
 
 $desktop: 1280px;
+$default-desktop: 1440px;
 $large-desktop: 1920px;
 
 @mixin font ($font-weight, $font-size) {
