--- a/assets/styles/scss/layouts/side-bar.scss
+++ b/assets/styles/scss/layouts/side-bar.scss
@@ -6,52 +6,96 @@
 
 .side-bar {
     position: sticky;
+    display: flex;
+    align-items: center;
 
     height: 100vh;
 
     border-radius: 0 60px 60px 0;
     background-color: $main-color;
 
+    // transition-duration: 1s;
+
     nav {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        justify-content: space-between;
         align-items: center;
 
+        width: 49.7%;
+        height: 57.7vh;
+
         cursor: pointer;
+
+        li {
+            width: 100%;
+            list-style-type: none;
+
+            :hover {
+                margin-left: 8px;
+
+                transition-duration: 0.6s;
+            }
+        }
     }
 }
 
-@media screen and (min-width: $desktop) and (max-width: ($default-desktop - 1px )) {
-.side-bar {
-    width: 11.18%;
-    
-    nav {
-        width: 101%;
-        height: 100%;
+
+.side-bar__link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 100%;
+
+    color: white;
+    text-decoration: none;
+
+
+    img {
+        width: 37.3%;
+        padding-bottom: 1.24vh;
     }
 }
+
+@media screen and (min-width: $desktop) and (max-width: ($default-desktop - 1px)) {
+    .side-bar {
+        width: 11.18%;
+
+        nav {
+            width: 101%;
+        }
+    }
+
+    .side-bar__link {
+        @include font (700, 14px)
+    }
 }
-@media screen and (min-width: $default-desktop) and (max-width: $large-desktop){
+
+@media screen and (min-width: $default-desktop) and (max-width: $large-desktop) {
     .side-bar {
         width: 161px;
 
         nav {
             width: 170px;
-            height: 100%;
         }
     }
-    
+
+    .side-bar__link {
+        @include font (700, 14px)
+    }
 }
 
-@media screen and (min-width: ($large-desktop + 1px )) {
+@media screen and (min-width: ($large-desktop + 1px)) {
     .side-bar {
         width: 11.18%;
-        
+
         nav {
             width: 101%;
-            height: 100%;
         }
     }
+
+    .side-bar__link {
+        @include font (700, ((100vw + 13200px) / 1080))
+    }
 }
-
-
