--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -9,15 +9,41 @@
 }
 .side-bar {
   position: sticky;
+  display: flex;
+  align-items: center;
   height: 100vh;
   border-radius: 0 60px 60px 0;
   background-color: #089BAB;
 }
 .side-bar nav {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  width: 49.7%;
+  height: 57.7vh;
   cursor: pointer;
+}
+.side-bar nav li {
+  width: 100%;
+  list-style-type: none;
+}
+.side-bar nav li :hover {
+  margin-left: 5px;
+  transition-duration: 0.6s;
+}
+
+.side-bar__link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  color: white;
+  text-decoration: none;
+}
+.side-bar__link img {
+  width: 37.3%;
+  padding-bottom: 1.27vh;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
@@ -26,7 +52,11 @@
   }
   .side-bar nav {
     width: 101%;
-    height: 100%;
+  }
+  .side-bar__link {
+    font-weight: 700;
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
   }
 }
 @media screen and (min-width: 1440px) and (max-width: 1920px) {
@@ -35,7 +65,11 @@
   }
   .side-bar nav {
     width: 170px;
-    height: 100%;
+  }
+  .side-bar__link {
+    font-weight: 700;
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
   }
 }
 @media screen and (min-width: 1921px) {
@@ -44,7 +78,11 @@
   }
   .side-bar nav {
     width: 101%;
-    height: 100%;
+  }
+  .side-bar__link {
+    font-weight: 700;
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
   }
 }
 .wrapper {
