--- a/assets/styles/scss/pages/articles.scss
+++ b/assets/styles/scss/pages/articles.scss
@@ -1,2 +1,109 @@
 @import "../layouts/variables.scss";
 
+.articles-wrapper {
+    background-color: $basic-color;
+}
+
+.articles-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.articles-section {
+    display: flex;
+    justify-content: space-around;
+    background-color: $main-color;
+    width: 70vw;
+    margin-top: 5vh;
+    margin-right: 10vw;
+    border-radius: 26px 26px 0 0;
+    cursor: pointer;
+
+    &__article {
+        color: white;
+        font-family: $default-font;
+        font-weight: 500;
+        font-size: 0.9em;
+        letter-spacing: 0.5px;
+        width: 100%;
+        padding: 2vh;
+        text-align: center;
+
+        &_food {
+            border-radius: 25px 0 0 0;
+        }
+
+        &_psycho {
+            border-radius: 0 25px 0 0;
+        }
+    }
+
+    &__link:hover {
+        color: $main-color;
+        font-weight: 600;
+    }
+
+    &__article:hover {
+        background-color: white;
+        color: $main-color;
+        font-weight: 600;
+        padding: 2vh;
+        margin: 0;
+    }
+}
+
+.articles-topics {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 70vw;
+    margin: 3vh 0 4vh 0;
+    margin-right: 10vw;
+    grid-gap: 3vw;
+
+    &__img {
+        max-width: 100%;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+    &__title {
+        font-family: $default-font;
+        font-weight: 600;
+        font-size: 0.85em;
+        letter-spacing: 0.5px;
+        margin-top: 1.5vh;
+        margin-bottom: 0;
+        color: black;
+    }
+
+
+    &__text {
+        font-family: $default-font;
+        // text-align: justify; ???
+        font-weight: 300;
+        font-size: 0.85em;
+        letter-spacing: 0.5px;
+        margin-top: 1.5vh;
+    }
+
+    &__link {
+        text-decoration: none;
+        color: rgba(0, 0, 0, 0.7);
+    }
+}
+
+.articles-topics__link:hover .articles-topics__title {
+    text-decoration: underline;
+}
+
+
+.articles-copy {
+    font-family: $default-font;
+        font-weight: 300;
+        font-size: 0.6em;
+        letter-spacing: 0.5px;
+        color: rgba(0, 0, 0, 0.7);
+        text-align: center;
+        margin-bottom: 4vh;
+}
