--- a/assets/styles/scss/pages/registration.css
+++ b/assets/styles/scss/pages/registration.css
@@ -3,7 +3,7 @@
   text-align: center;
 }
 
-.pop_up {
+.registration__pop-up {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -13,38 +13,38 @@
   z-index: 2;
 }
 
-.pop_up_container {
+.registration__pop-up_container {
   display: flex;
   width: 100%;
   height: 100%;
 }
 
-.pop_up_body {
+.registration__pop-up_body {
   margin: auto;
   width: 500px;
   background-color: rgb(247, 245, 245);
   border-radius: 10px;
   text-align: center;
-  padding: 100px 15px 110px 15px;
+  padding: 80px 15px 110px 15px;
   position: relative;
 }
 
-.pop_up_body input {
+.registration__pop-up_body input {
   display: block;
   margin: 25px auto 0px auto;
   width: 330px;
-  padding: 17px 20px;
-  background-color: rgb(173, 226, 229);
-  border-radius: 10px;
-  border: none;
-  color: aqua;
+  padding: 7px 17px;
+  background-color: rgb(228, 238, 238);
+  border-radius: 15px;
+  border-color: rgb(8, 155, 171);
+  border-width: 3px;
 }
 
-.pop_up_body input:focus {
+.registration__pop-up_body input:focus {
   outline: none;
 }
 
-.pop_up_body button {
+.registration__pop-up_body button {
   cursor: pointer;
   display: block;
   width: 330px;
@@ -53,13 +53,125 @@
   border: none;
   color: white;
   border-radius: 10px;
-  background-color: aqua;
+  background-color: rgb(247, 199, 142);
 }
 
-.pop_up_close {
+.registration__pop-up_close {
   position: absolute;
   top: 15px;
   right: 15px;
   font-size: 21px;
   cursor: pointer;
+}
+
+.registration__title {
+  color: rgb(255, 124, 2);
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 15px;
+}
+
+.registration__title_description {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.registration__text {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.customization__pop-up {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgb(63, 61, 61);
+  z-index: 2;
+}
+
+.customization__pop-up_container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.customization__pop-up_body {
+  margin: auto;
+  width: 500px;
+  background-color: rgb(247, 245, 245);
+  border-radius: 10px;
+  text-align: center;
+  padding: 80px 15px 110px 15px;
+  position: relative;
+}
+
+.customization__pop-up_body input {
+  display: block;
+  margin: 25px auto 0px auto;
+  width: 330px;
+  padding: 7px 17px;
+  background-color: rgb(228, 238, 238);
+  border-radius: 15px;
+  border-color: rgb(8, 155, 171);
+  border-width: 3px;
+}
+
+.customization__pop-up_body input:focus {
+  outline: none;
+}
+
+.customization__pop-up_body button {
+  cursor: pointer;
+  display: block;
+  width: 330px;
+  margin: 60px auto 0px auto;
+  padding: 20px 0px;
+  border: none;
+  color: white;
+  border-radius: 10px;
+  background-color: rgb(247, 199, 142);
+}
+
+.customization__pop-up_close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 21px;
+  cursor: pointer;
+}
+
+.customization__title {
+  color: rgb(255, 124, 2);
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 15px;
+  padding-top: 0;
+}
+
+.customization__title_description {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.customization__text {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 30px;
 }/*# sourceMappingURL=registration.css.map */
