--- a/assets/styles/scss/layouts/side-bar.css
+++ b/assets/styles/scss/layouts/side-bar.css
@@ -1,7 +1,8 @@
 .side-bar {
-  position: sticky;
+  position: fixed;
   display: flex;
   align-items: center;
+  z-index: 10;
   height: 100vh;
   border-radius: 0 60px 60px 0;
   background-color: #089BAB;
@@ -20,8 +21,8 @@
   list-style-type: none;
 }
 .side-bar nav li :hover {
-  margin-left: 5px;
-  transition-duration: 0.6s;
+  margin-left: 8px;
+  transition-duration: 0.4s;
 }
 
 .side-bar__link {
@@ -34,15 +35,15 @@
 }
 .side-bar__link img {
   width: 37.3%;
-  padding-bottom: 1.27vh;
+  padding-bottom: 1.24vh;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
   .side-bar {
-    width: 11.18%;
+    width: 11.18vw;
   }
   .side-bar nav {
-    width: 101%;
+    width: 100%;
   }
   .side-bar__link {
     font-weight: 700;
@@ -65,14 +66,14 @@
 }
 @media screen and (min-width: 1921px) {
   .side-bar {
-    width: 11.18%;
+    width: 8.38vw;
   }
   .side-bar nav {
     width: 101%;
   }
   .side-bar__link {
     font-weight: 700;
-    font-size: 14px;
+    font-size: calc((100vw + 13200px) / 1080);
     font-family: "Montserrat", sans-serif;
   }
 }/*# sourceMappingURL=side-bar.css.map */
