--- a/assets/styles/scss/pages/index.scss
+++ b/assets/styles/scss/pages/index.scss
@@ -1,7 +1,123 @@
 @import "../layouts/variables.scss";
 
+* {
+    box-sizing: border-box;
+}
+
+.profile {
+    display: flex;
+    justify-content: flex-end;
+
+    height: 100vh;
+}
+
+.profile-RSK {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+
+    background-color: white;
+    border-radius: 80px 0 0 80px;
+}
+
+.profile-RSK__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 13.48vh;
+    border-radius: 35px;
+    margin: 0;
+
+    text-align: center;
+
+    background-color: $main-color;
+    color: white;
+}
+
+.profile-RSK__recommendations {
+    width: 100%;
+    height: 25.78vh;
+
+    background-color: $basic-color;
+    border-radius: 25px;
+}
+
+
+@media screen and (min-width: $desktop) and (max-width: $default-desktop) {
+    .profile-RSK {
+        width: 43.54vw;
+        padding: 3.16vw;
+    }
+
+    .profile-RSK__title {
+        line-height: 30px;
+
+        @include font (400, 23px)
+    }
+    .profile-RSK__recommendations{
+        padding: 2.08vw;
+    }
+
+    .profile-welcome {
+        width: 34.72vw;
+        margin-right: 5.34vw;
+    }
+}
+
+@media screen and (min-width: ($default-desktop + 1px)) and (max-width: $large-desktop) {
+    .profile-RSK {
+        width: 627px;
+        padding: 45px;
+    }
+
+    .profile-RSK__title {
+        line-height: 30px;
+
+        @include font (400, 23px)
+    }
+    .profile-RSK__recommendations{
+        padding: 30px;
+    }
+
+    .profile-welcome {
+        width: 500px;
+        margin-right: 77px;
+    }
+}
+
+@media screen and (min-width: ($large-desktop + 1px)) {
+    .profile-RSK {
+        width: 32.65vw;
+        padding: 2.34vw;
+    }
+
+    .profile-welcome {
+        width: 26.04vw;
+        margin-right: 4.01vw;
+    }
+
+    .profile-RSK__title {
+        @include font (400, calc((100vw + 6360px)/360))
+    }
+    .profile-RSK__recommendations{
+        padding: 1.56vw;
+    }
+}
+
+// wrapper
 .wrapper {
     margin: auto;
+    background-color: $basic-color;
+}
+
+@media screen and (max-width: ($desktop - 1px)) {
+    .wrapper {
+        display: none;
+    }
 }
 
 @media screen and (min-width: $desktop) and (max-width: $large-desktop) {
@@ -10,8 +126,11 @@
     }
 }
 
-@media screen and (min-width: ($large-desktop + 1px)){
+@media screen and (min-width: ($large-desktop + 1px)) {
     .wrapper {
         width: 75vw;
     }
+
 }
+
+// wrapper
