--- a/assets/styles/scss/layouts/variables.scss
+++ b/assets/styles/scss/layouts/variables.scss
@@ -5,6 +5,7 @@ $basic-color: #E4EEEE;
 $main-color: #089BAB;
 $button-color: #F7C78E;
 $figure-color: #FF7C02;
+$text-color: rgba(0, 0, 0, 0.7);
 
 $desktop: 1280px;
 $default-desktop: 1440px;
