--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -1,5 +1,19 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.font-black {
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.font-orange {
+  color: #FF7C02;
+}
+
+.font-blue {
+  color: #089BAB;
 }
 
 .profile {
@@ -32,10 +46,50 @@
 }
 
 .profile-RSK__recommendations {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 100%;
   height: 25.78vh;
   background-color: #E4EEEE;
   border-radius: 25px;
+}
+
+.profile-RSK__kkal {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.profile-RSK__macro {
+  display: flex;
+  justify-content: space-around;
+}
+.profile-RSK__macro div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.profile-RSK__form {
+  width: 100%;
+}
+
+.profile-RSK__form-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 36.82vh;
+  width: 100%;
+}
+
+.profile-RSK__form-element {
+  display: flex;
+  margin-right: 18px;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1440px) {
@@ -50,11 +104,44 @@
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__recommendations {
-    padding: 2.08vw;
+    padding: 3.16vh;
+  }
+  .profile-RSK__kkal {
+    line-height: 22px;
+    font-weight: 500;
+    font-size: 17px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__macroelement {
+    line-height: 25px;
+    font-weight: 700;
+    font-size: 17px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__macroelement-amount {
+    line-height: 25px;
+    font-weight: 700;
+    font-size: 17px;
+    font-family: "Inter", sans-serif;
   }
   .profile-welcome {
     width: 34.72vw;
     margin-right: 5.34vw;
+  }
+  .profile-RSK__weight {
+    font-weight: 400;
+    font-size: 17px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__weight span {
+    font-weight: 400;
+    font-size: 17px;
+    font-family: "Inter", sans-serif;
+  }
+  .profile-RSK__form-attribute {
+    font-weight: 300;
+    font-size: 17px;
+    font-family: "Montserrat", sans-serif;
   }
 }
 @media screen and (min-width: 1441px) and (max-width: 1920px) {
@@ -75,6 +162,39 @@
     width: 500px;
     margin-right: 77px;
   }
+  .profile-RSK__kkal {
+    line-height: 35px;
+    font-weight: 500;
+    font-size: 23px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__macroelement {
+    line-height: 35px;
+    font-weight: 700;
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__macroelement-amount {
+    line-height: 35px;
+    font-weight: 700;
+    font-size: 20px;
+    font-family: "Inter", sans-serif;
+  }
+  .profile-RSK__weight {
+    font-weight: 400;
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__weight span {
+    font-weight: 400;
+    font-size: 20px;
+    font-family: "Inter", sans-serif;
+  }
+  .profile-RSK__form-attribute {
+    font-weight: 300;
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+  }
 }
 @media screen and (min-width: 1921px) {
   .profile-RSK {
@@ -91,7 +211,7 @@
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__recommendations {
-    padding: 1.56vw;
+    padding: 2.24vh;
   }
 }
 .wrapper {
