--- a/assets/styles/scss/layouts/side-bar.css
+++ b/assets/styles/scss/layouts/side-bar.css
@@ -1,49 +1,55 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 .side-bar {
-  position: fixed;
   display: flex;
+  justify-content: center;
   align-items: center;
+  position: fixed;
   z-index: 10;
-  height: 100vh;
-  border-radius: 0 60px 60px 0;
   background-color: #089BAB;
+  border-radius: 0px 60px 60px 0px;
 }
 .side-bar nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 49.7%;
-  height: 57.7vh;
+  width: 60%;
+  height: 57.7%;
   cursor: pointer;
 }
 .side-bar nav li {
   width: 100%;
   list-style-type: none;
+  transition-duration: 0.6s;
 }
 .side-bar nav li :hover {
-  margin-left: 8px;
-  transition-duration: 0.4s;
+  transition-duration: 0.6s;
+  margin-left: 8%;
 }
 
 .side-bar__link {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  color: white;
   text-decoration: none;
+  color: white;
 }
 .side-bar__link img {
-  width: 37.3%;
-  padding-bottom: 1.24vh;
+  width: 67%;
+  margin-bottom: 13px;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
   .side-bar {
     width: 11.18vw;
-  }
-  .side-bar nav {
-    width: 100%;
+    height: 100vh;
   }
   .side-bar__link {
     font-weight: 700;
@@ -54,9 +60,7 @@
 @media screen and (min-width: 1440px) and (max-width: 1920px) {
   .side-bar {
     width: 161px;
-  }
-  .side-bar nav {
-    width: 170px;
+    height: 100vh;
   }
   .side-bar__link {
     font-weight: 700;
@@ -66,10 +70,8 @@
 }
 @media screen and (min-width: 1921px) {
   .side-bar {
-    width: 8.38vw;
-  }
-  .side-bar nav {
-    width: 101%;
+    width: 8.39vw;
+    height: 1024px;
   }
   .side-bar__link {
     font-weight: 700;
