--- a/assets/styles/scss/layouts/side-bar.scss
+++ b/assets/styles/scss/layouts/side-bar.scss
@@ -1,21 +1,20 @@
 @import "./variables.scss";
 
-// body {
-//     overflow: hidden;
-// }
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 
 .side-bar {
-    position: fixed;
     display: flex;
+    justify-content: center;
     align-items: center;
+    position: fixed;
     z-index: 10;
 
-    height: 100vh;
-
-    border-radius: 0 60px 60px 0;
     background-color: $main-color;
-
-    // transition-duration: 1s;
+    border-radius: 0px 60px 60px 0px;
 
     nav {
         display: flex;
@@ -23,80 +22,71 @@
         justify-content: space-between;
         align-items: center;
 
-        width: 49.7%;
-        height: 57.7vh;
+        width: 60%;
+        height: 57.7%;
 
         cursor: pointer;
 
         li {
             width: 100%;
+
             list-style-type: none;
-
-            :hover {
-                margin-left: 8px;
-
-                transition-duration: 0.4s;
+            transition-duration: 0.6s;
+            :hover{
+                transition-duration: 0.6s;
+                margin-left: 8%;
             }
         }
     }
 }
 
-
 .side-bar__link {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 
     width: 100%;
 
-    color: white;
     text-decoration: none;
-
+    color: white;
 
     img {
-        width: 37.3%;
-        padding-bottom: 1.24vh;
+        width: 67%;
+        margin-bottom: 13px;
     }
 }
 
 @media screen and (min-width: $desktop) and (max-width: ($default-desktop - 1px)) {
     .side-bar {
         width: 11.18vw;
-
-        nav {
-            width: 100%;
-        }
+        height: 100vh;
     }
 
     .side-bar__link {
-        @include font (700, 14px)
+        @include font (700, 14px);
     }
 }
 
 @media screen and (min-width: $default-desktop) and (max-width: $large-desktop) {
     .side-bar {
         width: 161px;
-
-        nav {
-            width: 170px;
-        }
+        height: 100vh;
     }
 
     .side-bar__link {
-        @include font (700, 14px)
+        @include font (700, 14px);
     }
 }
 
 @media screen and (min-width: ($large-desktop + 1px)) {
     .side-bar {
-        width: 8.38vw;
-
-        nav {
-            width: 101%;
-        }
+        width: 8.39vw;
+        height: 1024px;
     }
 
     .side-bar__link {
-        @include font (700, calc((100vw + 13200px) / 1080))
+        @include font (700, calc((100vw + 13200px) / 1080));
     }
 }
+
