--- a/assets/styles/scss/layouts/side-bar.css
+++ b/assets/styles/scss/layouts/side-bar.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url(../../../fonts/Montserrat.ttf);
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../../fonts/Inter.ttf);
+}
 * {
   box-sizing: border-box;
   padding: 0;
@@ -10,6 +18,7 @@
   align-items: center;
   position: fixed;
   z-index: 10;
+  height: 100vh;
   background-color: #089BAB;
   border-radius: 0px 60px 60px 0px;
 }
@@ -49,7 +58,6 @@
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
   .side-bar {
     width: 11.18vw;
-    height: 100vh;
   }
   .side-bar__link {
     font-weight: 700;
@@ -60,7 +68,6 @@
 @media screen and (min-width: 1440px) and (max-width: 1920px) {
   .side-bar {
     width: 161px;
-    height: 100vh;
   }
   .side-bar__link {
     font-weight: 700;
@@ -71,7 +78,6 @@
 @media screen and (min-width: 1921px) {
   .side-bar {
     width: 8.39vw;
-    height: 1024px;
   }
   .side-bar__link {
     font-weight: 700;
