--- a/assets/styles/scss/layouts/side-bar.scss
+++ b/assets/styles/scss/layouts/side-bar.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import './fonts.scss';
 
 * {
     box-sizing: border-box;
@@ -12,6 +13,8 @@
     align-items: center;
     position: fixed;
     z-index: 10;
+
+    height: 100vh;
 
     background-color: $main-color;
     border-radius: 0px 60px 60px 0px;
@@ -60,7 +63,6 @@
 @media screen and (min-width: $desktop) and (max-width: ($default-desktop - 1px)) {
     .side-bar {
         width: 11.18vw;
-        height: 100vh;
     }
 
     .side-bar__link {
@@ -71,7 +73,6 @@
 @media screen and (min-width: $default-desktop) and (max-width: $large-desktop) {
     .side-bar {
         width: 161px;
-        height: 100vh;
     }
 
     .side-bar__link {
@@ -82,7 +83,6 @@
 @media screen and (min-width: ($large-desktop + 1px)) {
     .side-bar {
         width: 8.39vw;
-        height: 1024px;
     }
 
     .side-bar__link {
