--- a/assets/styles/scss/pages/index.scss
+++ b/assets/styles/scss/pages/index.scss
@@ -1,16 +1,28 @@
 @import "../layouts/variables.scss";
+@import '../layouts/fonts.scss';
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-.font-black{
+
+body {
+    background-color: $basic-color;
+}
+
+button {
+    cursor: pointer;
+}
+
+.font-black {
     color: $text-color;
 }
-.font-orange{
+
+.font-orange {
     color: $figure-color;
 }
+
 .font-blue {
     color: $main-color;
 }
@@ -18,35 +30,37 @@
 .profile {
     display: flex;
     justify-content: flex-end;
-
-    height: 100vh;
-}
-
-.profile-RSK {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
     height: 100%;
 
-    background-color: white;
-    border-radius: 80px 0 0 80px;
+    .profile-RSK {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        border-radius: 80px 0px 0px 80px;
+        padding: 4.59vh 3.12vw 4vh 3.12vw;
+        height: 100vh;
+
+        background-color: white;
+    }
 }
 
 .profile-RSK__title {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 
     width: 100%;
-    height: 13.48vh;
-    border-radius: 35px;
+    height: 13.48%;
     margin: 0;
-
-    text-align: center;
 
     background-color: $main-color;
     color: white;
+    border-radius: 35px;
+
+    letter-spacing: 0.03em;
 }
 
 .profile-RSK__recommendations {
@@ -54,54 +68,196 @@
     flex-direction: column;
     justify-content: space-between;
 
+    padding: 30px;
     width: 100%;
-    height: 25.78vh;
+    height: 25.78%;
 
     background-color: $basic-color;
     border-radius: 25px;
 }
+
 .profile-RSK__kkal {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-}
-.profile-RSK__macro{
-    display: flex;
-    justify-content: space-around;
 
-    div{
+    text-align: center;
+}
+
+.profile-RSK__macro {
+    align-self: center;
+    display: flex;
+    justify-content: space-between;
+
+    width: 65.55%;
+
+    line-height: 35px;
+
+    div {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
         align-items: center;
+        justify-content: space-between;
     }
 }
-.profile-RSK__form{
-    width: 100%;
+
+.profile-RSK__weight {
+    margin-top: 2%;
+
+    span {
+        font-weight: 700;
+    }
 }
+
+.profile-RSK__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 50%;
+}
+
 .profile-RSK__form-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
 
-    height: 36.82vh;
-    width: 100%;
+    height: 80%;
 }
+
 .profile-RSK__form-element {
     display: flex;
+    align-items: center;
+}
 
-    margin-right: 18px;
+.profile-RSK__form-attribute {
+    padding-right: 3%;
+}
 
-    color: $text-color;
+.profile-RSK__form-input {
+    width: 60%;
+    height: 4.29vh;
+    padding-left: 8px;
+
+    background-color: $basic-color;
+    border: 1px solid $main-color;
+    border-radius: 15px;
+
+    outline: none;
+    cursor: pointer;
+}
+
+.profile-RSK__form-button {
+    align-self: center;
+
+    @include button(41%, 12%);
+}
+
+.profile-RSK__form-button:hover {
+    transition-duration: 1s;
+    background-color: #f7a337;
+}
+
+.profile-welcome {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    height: 100vh;
+    padding-bottom: 4vh;
+}
+
+.profile-welcome__wripper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 52vh;
+    width: 100%;
+    margin-top: 21.39vh;
+}
+
+.profile-welcome__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+
+    width: 100%;
+    height: 42.87vh;
+    padding: 9.34% 9%;
+
+    background-color: white;
+    border-radius: 35px;
+
+    img {
+        width: 32%;
+        left: 33.6%;
+        top: -18.22%;
+        position: absolute;
+
+        border-radius: 50%;
+
+    }
+}
+
+.profile-welcome__form-button {
+    align-self: center;
+    margin-top: 3.8vh;
+
+    @include button(36%, 5.37vh);
+}
+
+.profile-welcome__form-button:hover {
+    transition-duration: 1s;
+    background-color: #f7a337;
+}
+
+.profile-welcome__form-inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    width: 100%;
+    height: 11.46vh;
+    margin-top: 2.23vh;
+}
+
+.profile-welcome__form-input {
+    height: 4.29vh;
+    padding-left: 8px;
+
+    background-color: $basic-color;
+    border: 1px solid $main-color;
+    border-radius: 15px;
+
+    outline: none;
+    cursor: pointer;
+}
+
+.profile-welcome__form-greet{
+    margin-top: 7.52vh;
+}
+
+.profile-welcome__button-reg{
+    @include button(44%, 5.37vh);
+
+    background-color: $main-color;
+    color: white;
+}
+
+.profile-welcome__button-reg:hover{
+    transition-duration: 1s;
+    background-color: #09b4c7;
 }
 
 
 @media screen and (min-width: $desktop) and (max-width: $default-desktop) {
     .profile-RSK {
         width: 43.54vw;
-        padding: 3.16vw;
     }
 
     .profile-RSK__title {
@@ -109,44 +265,48 @@
 
         @include font (400, 23px)
     }
-    .profile-RSK__recommendations{
-        padding: 3.16vh;
-    }
+
     .profile-RSK__kkal {
-        line-height: 22px;
-        @include font (500, 17px);
+        @include font (500, calc((100vw + 560px) / 80))
     }
-    .profile-RSK__macroelement {
-        line-height: 25px;
 
-        @include font (700, 17px)
+    .profile-RSK__macro {
+        @include font (700, calc((100vw + 1760px) / 160))
     }
-    .profile-RSK__macroelement-amount {
-        line-height: 25px;
 
-        @include figure (700, 17px)
+    .profile-RSK__weight {
+        @include font (400, calc((100vw + 1760px) / 160));
+    }
+
+    .profile-RSK__form-attribute,
+    .profile-paternity {
+        @include font (300, calc((100vw + 1760px) / 160))
+    }
+
+    .profile-RSK__form-input,
+    .profile-welcome__form-input {
+        @include font (300, calc((100vw + 1440px) / 160));
+    }
+
+    .profile-RSK__form-button,
+    .profile-welcome__form-button,
+    .profile-welcome__button-reg {
+        @include font (600, calc((100vw + 1760px) / 160));
     }
 
     .profile-welcome {
         width: 34.72vw;
-        margin-right: 5.34vw;
+        margin-right: 5.35vw;
     }
-    .profile-RSK__weight {
-        @include font (400, 17px);
 
-        span {
-            @include figure (400, 17px);
-        }
-    }
-    .profile-RSK__form-attribute {
-        @include font (300, 17px);
+    .profile-welcome__form-greet{
+        @include font (600, calc((100vw + 2720px) / 160));
     }
 }
 
 @media screen and (min-width: ($default-desktop + 1px)) and (max-width: $large-desktop) {
     .profile-RSK {
         width: 627px;
-        padding: 45px;
     }
 
     .profile-RSK__title {
@@ -154,61 +314,111 @@
 
         @include font (400, 23px)
     }
-    .profile-RSK__recommendations{
-        padding: 30px;
+
+    .profile-RSK__kkal {
+        @include font (500, 25px)
+    }
+
+    .profile-RSK__macro {
+        @include font (700, 20px)
+    }
+
+    .profile-RSK__weight {
+        @include font (400, 20px)
+    }
+
+    .profile-RSK__form-attribute,
+    .profile-paternity {
+        @include font (300, 20px)
+    }
+
+    .profile-RSK__form-input,
+    .profile-welcome__form-input {
+        @include font (300, 18px);
+    }
+
+    .profile-RSK__form-button,
+    .profile-welcome__form-button,
+    .profile-welcome__button-reg {
+        @include font (600, 20px);
     }
 
     .profile-welcome {
         width: 500px;
         margin-right: 77px;
     }
-    .profile-RSK__kkal {
-        line-height: 35px;
-        @include font (500, 23px);
-    }
-    .profile-RSK__macroelement {
-        line-height: 35px;
-
-        @include font (700, 20px);
-    }
-    .profile-RSK__macroelement-amount {
-        line-height: 35px;
-
-        @include figure (700, 20px);
-    }
-    .profile-RSK__weight {
-        @include font (400, 20px);
-        span {
-            @include figure (400, 20px);
-        }
-    }
-    .profile-RSK__form-attribute {
-        @include font (300, 20px);
+    .profile-welcome__form-greet{
+        @include font (600, 26px);
     }
 }
 
 @media screen and (min-width: ($large-desktop + 1px)) {
     .profile-RSK {
-        width: 32.65vw;
-        padding: 2.34vw;
-    }
-
-    .profile-welcome {
-        width: 26.04vw;
-        margin-right: 4.01vw;
+        width: 32.66vw;
     }
 
     .profile-RSK__title {
+        line-height: 30px;
+
         @include font (400, calc((100vw + 6360px)/360))
     }
-    .profile-RSK__recommendations{
-        padding: 2.24vh;
+
+    .profile-RSK__kkal {
+        @include font (500, calc((100vw + 11580px) / 540))
+    }
+
+    .profile-RSK__macro {
+        @include font (700, calc((100vw + 8880px) / 540))
+    }
+
+    .profile-RSK__weight {
+        @include font (400, calc((100vw + 8880px) / 540))
+    }
+
+    .profile-RSK__form-attribute,
+    .profile-paternity {
+        @include font (300, calc((100vw + 8880px) / 540))
+    }
+
+    .profile-RSK__form-input,
+    .profile-welcome__form-input {
+        @include font (300, calc((100vw + 7800px) / 540));
+    }
+
+    .profile-RSK__form-button,
+    .profile-welcome__form-button {
+        @include font (600, calc((100vw + 8800px) / 540));
+    }
+
+    .profile-welcome {
+        width: 26vw;
+        margin-right: 4vw;
+    }
+    .profile-welcome__form-greet,
+    .profile-welcome__button-reg{
+        @include font (600, calc((100vw + 12120px) / 540));
     }
 }
 
-// wrapper
+.font-black {
+    color: $text-color;
+}
+
+.font-orange {
+    color: $figure-color;
+}
+
+.font-blue {
+    color: $main-color;
+}
+
+.font-figure {
+    font-family: $figure-font;
+}
+
 .wrapper {
     margin: auto;
+    height: auto;
     background-color: $basic-color;
 }
 
