profile welcome-form dev

--- a/assets/styles/scss/pages/index.scss
+++ b/assets/styles/scss/pages/index.scss
@@ -1,5 +1,6 @@
 @import "../layouts/variables.scss";
 @import '../layouts/fonts.scss';
+// Inna
 
 * {
     box-sizing: border-box;
@@ -442,5 +443,5 @@ button {
     }
 
 }
-
+// Inna
 // wrapper
