--- a/assets/styles/scss/layouts/side-bar.scss
+++ b/assets/styles/scss/layouts/side-bar.scss
@@ -86,7 +86,7 @@
     }
 
     .side-bar__link {
-        @include font (700, calc((100vw + 13200px) / 1080));
+        @include font (700, calc((100vw - 666px) / 89));
     }
 }
 
