--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -7,53 +7,66 @@
   font-family: "Inter";
   src: url(../../../fonts/Inter.ttf);
 }
+@font-face {
+  font-family: "Montserrat";
+  src: url(../../../fonts/Montserrat.ttf);
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../../fonts/Inter.ttf);
+}
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 .side-bar {
-  position: fixed;
   display: flex;
+  justify-content: center;
   align-items: center;
+  position: fixed;
   z-index: 10;
-  max-height: 1024px;
-  border-radius: 0 60px 60px 0;
+  height: 100vh;
   background-color: #089BAB;
+  border-radius: 0px 60px 60px 0px;
 }
 .side-bar nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 49.7%;
-  height: 57.7vh;
+  width: 60%;
+  height: 57.7%;
   cursor: pointer;
 }
 .side-bar nav li {
   width: 100%;
   list-style-type: none;
+  transition-duration: 0.6s;
 }
 .side-bar nav li :hover {
-  margin-left: 8px;
-  transition-duration: 0.4s;
+  transition-duration: 0.6s;
+  margin-left: 8%;
 }
 
 .side-bar__link {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  color: white;
   text-decoration: none;
+  color: white;
 }
 .side-bar__link img {
-  width: 37.3%;
-  padding-bottom: 1.24vh;
+  width: 67%;
+  margin-bottom: 13px;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
   .side-bar {
     width: 11.18vw;
-    height: 100vh;
-  }
-  .side-bar nav {
-    width: 100%;
   }
   .side-bar__link {
     font-weight: 700;
@@ -64,10 +77,6 @@
 @media screen and (min-width: 1440px) and (max-width: 1920px) {
   .side-bar {
     width: 161px;
-    height: 1024px;
-  }
-  .side-bar nav {
-    width: 170px;
   }
   .side-bar__link {
     font-weight: 700;
@@ -77,22 +86,34 @@
 }
 @media screen and (min-width: 1921px) {
   .side-bar {
-    width: 8.38vw;
-    height: 1024px;
-  }
-  .side-bar nav {
-    width: 101%;
+    width: 8.39vw;
   }
   .side-bar__link {
     font-weight: 700;
-    font-size: calc((100vw + 13200px) / 1080);
+    font-size: calc((100vw - 666px) / 89);
     font-family: "Montserrat", sans-serif;
   }
+}
+@font-face {
+  font-family: "Montserrat";
+  src: url(../../../fonts/Montserrat.ttf);
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../../fonts/Inter.ttf);
 }
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: #E4EEEE;
+}
+
+button {
+  cursor: pointer;
 }
 
 .font-black {
@@ -110,38 +131,41 @@
 .profile {
   display: flex;
   justify-content: flex-end;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
-
-.profile-RSK {
+.profile .profile-RSK {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
-  height: 100%;
+  border-radius: 80px 0px 0px 80px;
+  padding: 4.59vh 3.12vw 4vh 3.12vw;
+  height: 100vh;
   background-color: white;
-  border-radius: 80px 0 0 80px;
 }
 
 .profile-RSK__title {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 13.48vh;
-  border-radius: 35px;
-  margin: 0;
   text-align: center;
+  width: 100%;
+  height: 13.48%;
+  margin: 0;
   background-color: #089BAB;
   color: white;
+  border-radius: 35px;
+  line-height: 140%;
+  letter-spacing: 0.03em;
 }
 
 .profile-RSK__recommendations {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 4%;
   width: 100%;
-  height: 25.78vh;
+  height: 25.78%;
   background-color: #E4EEEE;
   border-radius: 25px;
 }
@@ -149,164 +173,358 @@
 .profile-RSK__kkal {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .profile-RSK__macro {
+  align-self: center;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 65.55%;
+  line-height: 150%;
 }
 .profile-RSK__macro div {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+}
+
+.profile-RSK__weight {
+  margin-top: 2%;
+}
+.profile-RSK__weight span {
+  font-weight: 700;
 }
 
 .profile-RSK__form {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 50%;
 }
 
 .profile-RSK__form-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
-  height: 36.82vh;
-  width: 100%;
+  height: 80%;
 }
 
 .profile-RSK__form-element {
   display: flex;
-  margin-right: 18px;
+  align-items: center;
+}
+
+.profile-RSK__form-attribute {
+  padding-right: 3%;
+}
+
+.profile-RSK__form-input {
+  width: 60%;
+  height: 4.29vh;
+  padding-left: 8px;
+  background-color: #E4EEEE;
+  border: 1px solid #089BAB;
+  border-radius: 15px;
+  outline: none;
+  cursor: pointer;
+}
+
+.profile-RSK__form-button {
+  align-self: center;
+  width: 41%;
+  height: 12%;
+  border: 0;
+  border-radius: 15px;
+  background-color: #F7C78E;
   color: rgba(0, 0, 0, 0.7);
+  transition-duration: 1s;
+}
+
+.profile-RSK__form-button:hover {
+  transition-duration: 1s;
+  background-color: #f7a337;
+}
+
+.profile-welcome {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
+  padding-bottom: 4vh;
+}
+
+.profile-welcome__wripper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 52vh;
+  width: 100%;
+  margin-top: 21.39vh;
+}
+
+.profile-welcome__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  width: 100%;
+  height: 42.87vh;
+  padding: 9.34% 9%;
+  background-color: white;
+  border-radius: 35px;
+}
+.profile-welcome__form img {
+  width: 32%;
+  left: 33.6%;
+  top: -20.22%;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.profile-welcome__form-button {
+  align-self: center;
+  justify-self: flex-end;
+  position: absolute;
+  bottom: 4vh;
+  width: 36%;
+  height: 5.37vh;
+  border: 0;
+  border-radius: 15px;
+  background-color: #F7C78E;
+  color: rgba(0, 0, 0, 0.7);
+  transition-duration: 1s;
+}
+
+.profile-welcome__form-button:hover {
+  transition-duration: 1s;
+  background-color: #f7a337;
+}
+
+.profile-welcome__form-inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 11.46vh;
+  margin-top: 3.23vh;
+}
+
+.profile-welcome__form-input {
+  height: 4.29vh;
+  padding-left: 8px;
+  background-color: #E4EEEE;
+  border: 1px solid #089BAB;
+  border-radius: 15px;
+  outline: none;
+  cursor: pointer;
+}
+
+.profile-welcome__form-greet {
+  margin-top: 6.52vh;
+}
+
+.profile-welcome__button-reg {
+  width: 44%;
+  height: 5.37vh;
+  border: 0;
+  border-radius: 15px;
+  background-color: #F7C78E;
+  color: rgba(0, 0, 0, 0.7);
+  transition-duration: 1s;
+  background-color: #089BAB;
+  color: white;
+}
+
+.profile-welcome__button-reg:hover {
+  transition-duration: 1s;
+  background-color: #09b4c7;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1440px) {
   .profile-RSK {
     width: 43.54vw;
-    padding: 3.16vw;
   }
   .profile-RSK__title {
-    line-height: 30px;
     font-weight: 400;
     font-size: 23px;
     font-family: "Montserrat", sans-serif;
   }
-  .profile-RSK__recommendations {
-    padding: 3.16vh;
-  }
   .profile-RSK__kkal {
-    line-height: 22px;
     font-weight: 500;
-    font-size: 17px;
+    font-size: calc((100vw - 640px) / 32);
     font-family: "Montserrat", sans-serif;
   }
-  .profile-RSK__macroelement {
-    line-height: 25px;
+  .profile-RSK__macro {
     font-weight: 700;
-    font-size: 17px;
+    font-size: calc((100vw - 373px) / 53);
     font-family: "Montserrat", sans-serif;
-  }
-  .profile-RSK__macroelement-amount {
-    line-height: 25px;
-    font-weight: 700;
-    font-size: 17px;
-    font-family: "Inter", sans-serif;
-  }
-  .profile-welcome {
-    width: 34.72vw;
-    margin-right: 5.34vw;
   }
   .profile-RSK__weight {
     font-weight: 400;
-    font-size: 17px;
+    font-size: calc((100vw + 1760px) / 160);
     font-family: "Montserrat", sans-serif;
   }
-  .profile-RSK__weight span {
-    font-weight: 400;
-    font-size: 17px;
-    font-family: "Inter", sans-serif;
-  }
-  .profile-RSK__form-attribute {
+  .profile-RSK__form-attribute,
+  .profile-paternity {
     font-weight: 300;
-    font-size: 17px;
+    font-size: calc((100vw + 1760px) / 160);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__form-input,
+  .profile-welcome__form-input {
+    font-weight: 300;
+    font-size: calc((100vw + 1440px) / 160);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__form-button,
+  .profile-welcome__form-button,
+  .profile-welcome__button-reg {
+    font-weight: 600;
+    font-size: calc((100vw + 1760px) / 160);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-welcome {
+    width: 34.72vw;
+    margin-right: 5.35vw;
+  }
+  .profile-welcome__form-greet {
+    font-weight: 600;
+    font-size: calc((100vw + 2720px) / 160);
     font-family: "Montserrat", sans-serif;
   }
 }
 @media screen and (min-width: 1441px) and (max-width: 1920px) {
   .profile-RSK {
     width: 627px;
-    padding: 45px;
   }
   .profile-RSK__title {
-    line-height: 30px;
     font-weight: 400;
     font-size: 23px;
     font-family: "Montserrat", sans-serif;
   }
-  .profile-RSK__recommendations {
-    padding: 30px;
-  }
-  .profile-welcome {
-    width: 500px;
-    margin-right: 77px;
-  }
   .profile-RSK__kkal {
-    line-height: 35px;
     font-weight: 500;
-    font-size: 23px;
+    font-size: 25px;
     font-family: "Montserrat", sans-serif;
   }
-  .profile-RSK__macroelement {
-    line-height: 35px;
+  .profile-RSK__macro {
     font-weight: 700;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
-  }
-  .profile-RSK__macroelement-amount {
-    line-height: 35px;
-    font-weight: 700;
-    font-size: 20px;
-    font-family: "Inter", sans-serif;
   }
   .profile-RSK__weight {
     font-weight: 400;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
   }
-  .profile-RSK__weight span {
-    font-weight: 400;
-    font-size: 20px;
-    font-family: "Inter", sans-serif;
-  }
-  .profile-RSK__form-attribute {
+  .profile-RSK__form-attribute,
+  .profile-paternity {
     font-weight: 300;
     font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__form-input,
+  .profile-welcome__form-input {
+    font-weight: 300;
+    font-size: 18px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__form-button,
+  .profile-welcome__form-button,
+  .profile-welcome__button-reg {
+    font-weight: 600;
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-welcome {
+    width: 500px;
+    margin-right: 77px;
+  }
+  .profile-welcome__form-greet {
+    font-weight: 600;
+    font-size: 26px;
     font-family: "Montserrat", sans-serif;
   }
 }
 @media screen and (min-width: 1921px) {
   .profile-RSK {
-    width: 32.65vw;
-    padding: 2.34vw;
-  }
-  .profile-welcome {
-    width: 26.04vw;
-    margin-right: 4.01vw;
+    width: 32.66vw;
   }
   .profile-RSK__title {
     font-weight: 400;
-    font-size: calc((100vw + 6360px) / 360);
+    font-size: calc((100vw + 45px) / 85);
     font-family: "Montserrat", sans-serif;
   }
-  .profile-RSK__recommendations {
-    padding: 2.24vh;
+  .profile-RSK__kkal {
+    font-weight: 500;
+    font-size: calc((100vw + 11580px) / 540);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__macro {
+    font-weight: 700;
+    font-size: calc((100vw + 8880px) / 540);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__weight {
+    font-weight: 400;
+    font-size: calc((100vw + 8880px) / 540);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__form-attribute,
+  .profile-paternity {
+    font-weight: 300;
+    font-size: calc((100vw - 40px) / 94);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__form-input,
+  .profile-welcome__form-input {
+    font-weight: 300;
+    font-size: calc((100vw + 70px) / 110);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-RSK__form-button,
+  .profile-welcome__form-button,
+  .profile-welcome__button-reg {
+    font-weight: 600;
+    font-size: calc((100vw - 1836px) / 4);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-welcome {
+    width: 26vw;
+    margin-right: 4vw;
+  }
+  .profile-welcome__form-greet {
+    font-weight: 600;
+    font-size: calc((100vw - 210px) / 85);
+    font-family: "Montserrat", sans-serif;
   }
 }
+.font-black {
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.font-orange {
+  color: #FF7C02;
+}
+
+.font-blue {
+  color: #089BAB;
+}
+
+.font-figure {
+  font-family: "Inter", sans-serif;
+}
+
 .wrapper {
   margin: auto;
+  height: auto;
   background-color: #E4EEEE;
 }
 
