--- a/assets/styles/scss/pages/diary.css
+++ b/assets/styles/scss/pages/diary.css
@@ -1,5 +1,9 @@
-.diary-wrapper {
+body {
   background-color: #E4EEEE;
+}
+
+.diary-wrapper {
+  margin: auto;
 }
 
 .diary-content-wrapper {
@@ -88,6 +92,11 @@
   border: none;
   cursor: pointer;
   margin-top: 5%;
+  transition-duration: 0.1s;
+}
+.diary-table-string__add-btn :hover {
+  transition-duration: 0.1s;
+  margin-left: 6%;
 }
 .diary-table-string__add-btn-img {
   max-width: 35px;
@@ -139,6 +148,9 @@
 .diary-water-tracker__crrnt-res {
   font-size: 25px;
 }
+.diary-water-tracker__crrnt-res-ml {
+  font-size: 25px;
+}
 .diary-water-tracker__top-res {
   font-size: 25px;
   color: rgba(0, 0, 0, 0.6);
@@ -168,10 +180,11 @@
 }
 .diary-water-tracker__label:hover, .diary-water-tracker__label:hover ~ .diary-water-tracker__label {
   opacity: 1;
-  transition-duration: 500ms;
+  transition-duration: 1s;
 }
 .diary-water-tracker__label {
-  opacity: 0.5;
+  opacity: 0.25;
+  transition-duration: 1s;
 }
 .diary-water-tracker__input {
   visibility: hidden;
@@ -179,7 +192,7 @@
 }
 .diary-water-tracker__input:checked ~ .diary-water-tracker__label {
   opacity: 1;
-  transition-duration: 500ms;
+  transition-duration: 1s;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1440px) {
@@ -205,12 +218,23 @@
     font-size: 1vw;
   }
   .diary-water-tracker__crrnt-res,
-  .diary-water-tracker__top-res {
+  .diary-water-tracker__top-res,
+  .diary-water-tracker__crrnt-res-ml {
     font-size: 1.6vw;
   }
 }
-@media screen and (min-width: 1921px) {
+@media screen and (min-width: 1280px) and (max-width: 1920px) {
+  .diary-wrapper {
+    max-width: 1440px;
+  }
+}
+@media screen and (max-width: 1279px) {
   .wrapper {
+    display: none;
+  }
+}
+@media screen and (min-width: 1921px) {
+  .diary-wrapper {
     width: 75vw;
     margin: auto;
   }
@@ -224,7 +248,8 @@
     font-size: 1vw;
   }
   .diary-water-tracker__crrnt-res,
-  .diary-water-tracker__top-res {
+  .diary-water-tracker__top-res,
+  .diary-water-tracker__crrnt-res-ml {
     font-size: 1.6vw;
   }
 }/*# sourceMappingURL=diary.css.map */
