--- a/assets/styles/scss/pages/diary.scss
+++ b/assets/styles/scss/pages/diary.scss
@@ -2,8 +2,13 @@
 @import "../layouts/variables.scss";
 //@import "../layouts/side-bar.scss";
 
-.diary-wrapper {
+body {
     background-color: $basic-color;
+}
+
+.diary-wrapper {
+    //background-color: $basic-color;
+    margin: auto;
 
 }
 
@@ -113,6 +118,14 @@
         cursor: pointer;
 
         margin-top: 5%;
+
+        transition-duration: 0.1s;
+
+        :hover {
+            transition-duration: 0.1s;
+            margin-left: 6%;
+        }
+
     }
 
     &__add-btn-img {
@@ -174,10 +187,15 @@
         font-size: 25px;
     }
 
+    &__crrnt-res-ml {
+        font-size: 25px;
+    }
+
     &__top-res {
         font-size: 25px;
         color: #00000099;
     }
+
 
     &__top-res_font_inter {
         @include figure (400, 25px);
@@ -206,11 +224,12 @@
     &__label:hover,
     &__label:hover~&__label {
         opacity: 1;
-        transition-duration: 500ms;
+        transition-duration: 1s;
     }
 
     &__label {
-        opacity: 0.5;
+        opacity: 0.25;
+        transition-duration: 1s;
     }
 
     &__input {
@@ -220,7 +239,7 @@
 
     &__input:checked~&__label {
         opacity: 1;
-        transition-duration: 500ms;
+        transition-duration: 1s;
     }
 
 
@@ -260,14 +279,27 @@
     }
 
     .diary-water-tracker__crrnt-res,
-    .diary-water-tracker__top-res {
+    .diary-water-tracker__top-res,
+    .diary-water-tracker__crrnt-res-ml {
         font-size: 1.6vw;
     }
 
 }
 
-@media screen and (min-width: ($large-desktop + 1px)) {
+@media screen and (min-width: $desktop) and (max-width: $large-desktop) {
+    .diary-wrapper {
+        max-width: 1440px;
+    }
+}
+
+@media screen and (max-width: ($desktop - 1px)) {
     .wrapper {
+        display: none;
+    }
+}
+
+@media screen and (min-width: ($large-desktop + 1px)) {
+    .diary-wrapper {
         width: 75vw;
         margin: auto;
     }
@@ -284,7 +316,8 @@
     }
 
     .diary-water-tracker__crrnt-res,
-    .diary-water-tracker__top-res {
+    .diary-water-tracker__top-res,
+    .diary-water-tracker__crrnt-res-ml {
         font-size: 1.6vw;
     }
 
