--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -332,9 +332,10 @@ button {
     margin-right: 5.35vw;
   }
   .profile-welcome__form img {
-    top: -22.2%;
+    top: -27.2%;
   }
   .profile-welcome__form-greet {
+    margin-top: 5.52vh;
     font-weight: 600;
     font-size: calc((100vw + 2720px) / 160);
     font-family: "Montserrat", sans-serif;
