--- a/assets/styles/scss/pages/productnotfound.css
+++ b/assets/styles/scss/pages/productnotfound.css
@@ -5,6 +5,7 @@
 }
 
 .productnotfound__popup {
+  display: none;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -34,7 +35,7 @@
   padding: 20px;
 }
 
-#productnotfound__popup-submit,
+#productnotfound__popup-add,
 #productnotfound__popup-cancel {
   align-self: center;
   width: 35%;
@@ -52,7 +53,7 @@
   background-color: rgb(228, 238, 238);
 }
 
-#productnotfound__popup-submit:hover {
+#productnotfound__popup-add:hover {
   transition-duration: 1s;
   background-color: #f7a337;
 }
