--- a/assets/styles/scss/pages/addnewproduct.css
+++ b/assets/styles/scss/pages/addnewproduct.css
@@ -5,7 +5,7 @@
 }
 
 .newproduct__popup {
-  display: none;
+  /* display: none; */
   width: 100%;
   height: 100%;
   position: fixed;
@@ -103,7 +103,10 @@
   white-space: nowrap;
 }
 
-#newproduct__popup-energy {
+#newproduct__popup-energy,
+#newproduct__popup-fat,
+#newproduct__popup-carbs,
+#newproduct__popup-protein {
   width: 18vh;
   height: 5vh;
   border-radius: 15px;
@@ -115,7 +118,7 @@
   padding-left: 10px;
 }
 
-#newproduct__popup-submit {
+#newproduct__popup-add {
   align-self: center;
   width: 35%;
   height: 40px;
@@ -128,7 +131,7 @@
   cursor: pointer;
 }
 
-#newproduct__popup-submit:hover {
+#newproduct__popup-add:hover {
   transition-duration: 1s;
   background-color: #f7a337;
 }
